--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@xyflow/react": "^12.6.0",
     "elkjs": "^0.10.0",
+    "elkjs-svg": "^0.2.1",
     "eslint-plugin-prettier": "^5.2.6",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
