--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "@xyflow/react": "^12.6.0",
     "elkjs": "^0.10.0",
     "elkjs-svg": "^0.2.1",
@@ -19,7 +20,8 @@
     "next-themes": "^0.4.6",
     "openai": "^4.95.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
