--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "openai": "^4.95.1",
+    "panzoom": "^9.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0"
