--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@chakra-ui/react": "^3.16.0",
     "@emotion/react": "^11.14.0",
+    "@types/lodash": "^4.17.16",
     "@uidotdev/usehooks": "^2.4.1",
     "@xyflow/react": "^12.6.0",
     "elkjs": "^0.10.0",
     "elkjs-svg": "^0.2.1",
     "eslint-plugin-prettier": "^5.2.6",
+    "lodash": "^4.17.21",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "openai": "^4.95.1",
